# VettaVista

./: LICENSE.md  PRIVACY.md  README.md
Backend/: .gitignore  README.md  pyproject.toml  requirements.txt
Backend/config/: __init__.py  global_constants.py  models.py
Backend/config/templates/: ai_prompts.yaml  ai_settings.yaml  personals.yaml  search.yaml
Backend/modules/: server.py
Backend/modules/ai/: __init__.py  claude_connections.py  prompts.py  protocols.py
Backend/modules/api/rest/: __init__.py  application_endpoints.py  blacklist_endpoints.py  filter_endpoints.py  job_history_endpoints.py
Backend/modules/api/websocket/: __init__.py  base.py  editor_endpoints.py  router.py  sync_endpoints.py
Backend/modules/business/application/: application_service.py
Backend/modules/business/cache/: job_cache_service.py
Backend/modules/business/filter/: __init__.py  base.py  (+3 more)
Backend/modules/editor/: manager.py  types.py
Backend/modules/generators/: cover_letter_generator.py  resume_generator.py
Backend/modules/storage/: __init__.py  base.py  blacklist_storage.py  csv_storage.py  job_history_storage.py
Backend/modules/sync/: __init__.py  websocket_manager.py
Backend/static/editor/: index.html  pdf.worker.bundle.js
Backend/tests/: test_application_service.py  test_editor_endpoints.py
Backend/vettavista_backend/config/: __init__.py  global_constants.py
Backend/vettavista_backend/modules/: server.py  utils.py
Backend/vettavista_backend/tests/: conftest.py  test_application_endpoints.py  test_editor_manager.py  test_phase_transition.py
(+100 files in other folders)
