[project]
name = "vettavista-backend"
version = "0.0.1"
authors = [
  { name="Will Chen", email="wc_public@tuta.io" },
]
description = "Backend for VettaVista - Smart Job Search & Application Assistant"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "anthropic[aiohttp]>=0.64.0",
    "demjson3==3.0.6",
    "fastapi==0.116.1",
    "fasttext==0.9.3; sys_platform=='linux'",
    "huggingface-hub==0.34.4",
    "lingua-language-detector==2.1.1",
    "platformdirs>=4.3.8",
    "pandas==2.3.2",
    "PyLaTeX==1.4.2",
    "PyYAML==6.0.2",
    "RapidFuzz==3.13.0",
    "sentence-transformers==5.1.0",
    "tenacity==9.1.2",
    "uvicorn[standard]>=0.34.0",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/wchen342/VettaVista/tree/master/Backend"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
vettavista-backend = "vettavista_backend.modules.server:main"